--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ requests==2.31.0
 aws-lambda-powertools==2.36.0
 boto3==1.34.131
 python-dotenv==1.0.0
+ragas==0.2.0
+langsmith==0.1.112
+datasets==2.15.0
+nltk==3.8.1
