--- a/lambda_functions/preprocessor/requirements.txt
+++ b/lambda_functions/preprocessor/requirements.txt
@@ -1,3 +1,9 @@
 aws-lambda-powertools==2.36.0
+langchain-aws==0.1.18
 langchain==0.2.17
+langchain-community==0.2.19
+langchain-core==0.2.43
+boto3==1.34.131
 pydantic==2.5.3
+pypdf==3.15.1
+opensearch-py==2.8.0
